--- a/nx.json
+++ b/nx.json
@@ -38,7 +38,11 @@
       "options": {
         "targetName": "test"
       },
-      "exclude": ["apps/auth-service-e2e/**/*"]
+      "exclude": [
+        "apps/auth-service-e2e/**/*",
+        "document-service-e2e/**/*",
+        "apps/document-service-e2e/**/*"
+      ]
     }
   ]
 }
