--- a/nx.json
+++ b/nx.json
@@ -41,7 +41,8 @@
       "exclude": [
         "apps/auth-service-e2e/**/*",
         "document-service-e2e/**/*",
-        "apps/document-service-e2e/**/*"
+        "apps/document-service-e2e/**/*",
+        "apps/api-gateway-e2e/**/*"
       ]
     }
   ]
