--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@nestjs/platform-express": "^11.0.0",
     "axios": "^1.6.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.0"
+    "rxjs": "^7.8.0",
+    "ts-proto": "^2.8.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
