--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@nestjs/core": "^11.0.0",
     "@nestjs/microservices": "^11.1.9",
     "@nestjs/platform-express": "^11.0.0",
+    "@prisma/client": "^7.1.0",
     "axios": "^1.6.0",
+    "prisma": "^7.1.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "ts-proto": "^2.8.3"
