--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "@grpc/proto-loader": "^0.8.0",
     "@nestjs/common": "^11.0.0",
     "@nestjs/core": "^11.0.0",
+    "@nestjs/jwt": "^11.0.2",
     "@nestjs/microservices": "^11.1.9",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.0",
     "@prisma/client": "^7.1.0",
     "axios": "^1.6.0",
+    "bcryptjs": "^3.0.3",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "prisma": "^7.1.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
