--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.0",
     "@prisma/client": "^7.1.0",
+    "@types/passport-jwt": "^4.0.1",
     "axios": "^1.6.0",
     "bcryptjs": "^3.0.3",
+    "class-validator": "^0.14.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "prisma": "^7.1.0",
